--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ name=Perinci-Sub-To-ZshComplete
 :version=0.23
 
 [Prereqs]
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Rinci=1.1.70
 
 perl=5.010001
