[dist] Move spec prereqs from RuntimeRequires to DevelopRecommends to reduce deps but still allow indicating spec requirement

--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,11 @@ name=Perinci-Sub-To-ZshComplete
 :version=0.23
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.70
-
 perl=5.010001
 Perinci::Sub::Normalize=0
 Perinci::Sub::To::CLIDocData=0
 String::ShellQuote=0
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.70
