[dzil] Re-pass lint-prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ name=Perinci-Sub-To-ZshComplete
 
 [Prereqs]
 perl=5.010001
+Perinci::Sub::Complete=0
 Perinci::Sub::Normalize=0
 Perinci::Sub::To::CLIDocData=0
 String::ShellQuote=0
