--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,5 @@ Perinci::Sub::Normalize=0
 Perinci::Sub::To::CLIDocData=0
 String::ShellQuote=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.70
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.70
