--- a/dist.ini
+++ b/dist.ini
@@ -12,5 +12,7 @@ Perinci::Sub::Normalize=0
 Perinci::Sub::To::CLIDocData=0
 String::ShellQuote=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.70
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.70
